[gd_scene load_steps=2 format=3 uid="uid://dvxgu74qdcth6"]

[ext_resource type="Script" path="res://UI/MultiplayerConfig.gd" id="1_qx0fp"]

[node name="MultiplayerConfig" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qx0fp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -66.0
offset_right = 35.5
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
text = "Join"

[node name="Play" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
text = "Play"

[connection signal="button_down" from="Panel/GridContainer/Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Panel/GridContainer/Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Panel/GridContainer/Play" to="." method="_on_play_button_down"]
